@@ -1,5 +1,7 @@
 2009-01-15  Lars Hartmann  <lars (at) chaotika (dot) org>
 
+	* lib/liblputil.c (lputil_splitstr_destroy): fixed segfault
+
 	* lib/liblpatom.c (lpatom_version_explode): added.
 
 	* lib/liblpatom.h (lpatom_t): added member ver_ex (a int array
@@ -8,6 +10,8 @@
 	(lpatom_version_cmp): added.
 
 	* lib/liblputil.h (lputil_splitstr_destroy): added.
+
+	(lputil_strndup): added.
 
 2009-01-14  Lars Hartmann  <lars (at) chaotika (dot) org>
 
